<?xml version="1.0"?>
<package>
  <name>gazebo_custom_plugins</name>
  <version>0.0.0</version>
  <description>The gazebo_custom_plugins package</description>

  <maintainer email="cyrill.guillemot@gmail.com">Cyrill Guillemot</maintainer>
  <license>GPLv3</license>
  <url type="website">https://serial-robotics.org/</url>
  <author email="cyrill.guillemot@gmail.com">Cyrill Guillemot</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
