<?xml version="1.0"?>
<package format="2">

  <name>robot_control</name>
  <version>0.0.0</version>
  <description>Control algorithms for mobile robots</description>

  <maintainer email="cyrill.guillemot@gmail.com">Cyrill Guillemot</maintainer>
  <url type="website">https://serial-robotics.org/</url>
  <author email="cyrill.guillemot@gmail.com">Cyrill Guillemot</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <test_depend>rosunit</test_depend>

</package>
